# tanser

./: .gitignore  Dockerfile  LICENSE  Makefile  pyproject.toml
tanser/: __main__.py  config.py  handling.py  telegram.py
